# django-ismobile

./: LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
ismobile/: middleware.py  utils.py
testproject/: settings.py
tests/: test_middleware.py  test_utils.py
