[tool.poetry]
name = "django-ismobile"
version = "1.0.2"
description = "Middleware for Django."
authors = ["Can Sarigol <ertugrulsarigol@gmail.com>"]
packages = [
    { include = "ismobile" }
]
readme = "README.md"
homepage = "https://github.com/cansarigol/django-ismobile"
repository = "https://github.com/cansarigol/django-ismobile"
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
nox = "^2020.5.24"
django = "^2.2.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
